--- a/app/views/admin/collections/index.html.erb
+++ b/app/views/admin/collections/index.html.erb
@@ -1,8 +1,17 @@
-<% if @group %>
-  <h1>
-    <%= link_to @group.supergroup.name_ka, admin_groups_path(:supergroup_id => @group.supergroup.id) %> > <%= @group.name_ka %>
-  </h1>
-<% end %>
+<%= render partial: "admin/shared/header" %>
+
+<h1>
+  <% if @group %>
+    <%= link_to @group.supergroup.name_ka, admin_groups_path(:supergroup_id => @group.supergroup.id) %> > <%= @group.name_ka %> >
+  <% end %>
+  კრებულები
+</h1>
+<p>
+  <%= link_to 'ახალი კრებულის დამატება', new_admin_collection_path %>
+</p>
+<p>
+  მონაცემთა ბაზაში <%= @collections.count %> ჩანაწერია
+</p>
 
 <table>
   <thead>
