--- a/app/views/admin/supergroups/index.html.erb
+++ b/app/views/admin/supergroups/index.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: "admin/shared/header" %>
 
 <h1>
-  ქვეკორპუსები
+  <%= link_to 'ქვეკორპუსები', admin_supergroups_path %>
 </h1>
 <p>
   <%= link_to 'ახალი ქვეკორპუსის დამატება', new_admin_supergroup_path %>
@@ -18,9 +18,10 @@
   <tbody>
     <% @supergroups.each do |supergroup| %>
       <tr>
-        <td> <%= link_to supergroup.name_ka, admin_groups_path(:supergroup_id => supergroup.id) %> </td>
-        <td> <%= link_to supergroup.name_en, admin_groups_path(:supergroup_id => supergroup.id) %> </td>
+        <td> <%= link_to supergroup.name_ka, admin_groups_path(supergroup_id: supergroup.id) %> </td>
+        <td> <%= link_to supergroup.name_en, admin_groups_path(supergroup_id: supergroup.id) %> </td>
         <td> <%= supergroup.status %> </td>
+        <td> <%= link_to 'edit', edit_admin_supergroup_path(id: supergroup.id) %> </td>
       </tr>
     <% end %>
   </tbody>
