--- a/app/views/admin/groups/index.html.erb
+++ b/app/views/admin/groups/index.html.erb
@@ -7,7 +7,7 @@
   <%= link_to 'ჯგუფები', admin_groups_path(supergroup_id: @supergroup.id) %>
 </h1>
 <p>
-  <%= link_to 'ახალი ჯგუფის დამატება', new_admin_group_path %>
+  <%= link_to 'ახალი ჯგუფის დამატება', new_admin_group_path(supergroup_id: @supergroup.id) %>
 </p>
 <p>
   მონაცემთა ბაზაში <%= @groups.count %> ჩანაწერია
