--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="h-full">
   <head>
     <title>ParallelCorpus</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,9 +11,14 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
-    </main>
+  <body class="h-full">
+    <!-- <main class="container mx-auto px-5"> -->
+      <div class="min-h-full">
+        <%= render "admin/shared/header" %>
+        <div class="py-10">
+          <%= yield %>
+        </div>
+      </div>
+    <!-- </main> -->
   </body>
 </html>
