Add pagination to supergroups

--- a/app/views/admin/supergroups/index.html.erb
+++ b/app/views/admin/supergroups/index.html.erb
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <%= paginate @supergroups %>
+    <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {} %>
 
   </div>
 </main>
