--- a/app/views/admin/supergroups/index.html.erb
+++ b/app/views/admin/supergroups/index.html.erb
@@ -13,98 +13,104 @@
       <div class="sm:flex sm:items-center">
         <div class="sm:flex-auto">
           <!-- <h1 class="text-base font-semibold leading-6 text-gray-900">ქვეკორპუსები</h1> -->
-          <p class="mt-2 text-sm text-gray-700">მონაცემთა ბაზაში <%= @supergroups.count %> ჩანაწერია</p>
+          <p class="mt-2 text-sm text-gray-700">მონაცემთა ბაზაში <%= @supergroups.total_count %> ჩანაწერია</p>
         </div>
         <div class="mt-4 sm:ml-16 sm:mt-0 sm:flex-none">
-          <%= link_to 'ახალი ქვეკორპუსის დამატება', new_admin_supergroup_path, type: "button", class: "block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
+          <%= link_to 'ახალი ქვეკორპუსის დამატება',
+                      new_admin_supergroup_path,
+                      type: "button",
+                      class: "block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
           <!-- <button type="button" class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add user</button> -->
         </div>
       </div>
       <div class="mt-8 flow-root">
         <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
           <div class="inline-block min-w-full py-2 align-middle">
-            <table class="w-full border-separate border-spacing-0">
-              <thead>
-                <tr>
-                  <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">UID</th>
-                  <th scope="col" class="max-w-[240px] sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:table-cell">დასახელება ქართულად</th>
-                  <th scope="col" class="max-w-[240px] sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter lg:table-cell">დასახელება ინგლისურად</th>
-                  <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter">სტატუსი</th>
-                  <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter">ჯგუფები</th>
-                  <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter">კრებულები</th>
-                  <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter">წყვილები</th>
-                  <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 py-3.5 pl-3 pr-4 backdrop-blur backdrop-filter sm:pr-6 lg:pr-8">
-                    <span class="sr-only"></span>
-                  </th>
-                </tr>
-                <tr>
-                  <%= form_with scope: :search, url: search_admin_supergroups_path, method: :get do |form| %>
+            <%= form_for @search, url: admin_supergroups_path, method: :get do |form| %>
+              <table class="w-full border-separate border-spacing-0">
+                <thead>
+                  <tr>
+                    <th scope="col"
+                        class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">
+                      UID
+                    </th>
+                    <th scope="col" class="max-w-[240px] sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:table-cell">დასახელება ქართულად</th>
+                    <th scope="col" class="max-w-[240px] sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter lg:table-cell">დასახელება ინგლისურად</th>
+                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter">სტატუსი</th>
+                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter">ჯგუფები</th>
+                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter">კრებულები</th>
+                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter">წყვილები</th>
+                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 py-3.5 pl-3 pr-4 backdrop-blur backdrop-filter sm:pr-6 lg:pr-8">
+                      <span class="sr-only"></span>
+                    </th>
+                  </tr>
+                  <tr>
                     <th scope="col" class="sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm text-gray-500 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">
 
                     </th>
                     <th scope="col" class="max-w-[240px] sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 px-3 text-left text-sm text-gray-500 backdrop-blur backdrop-filter sm:table-cell">
-                      <%= form.select :name_ka, Supergroup.order(:name_ka).map { |supergroup| [supergroup.name_ka, supergroup.name_ka] }, { include_blank: true }, { class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" } %>
+                      <%= form.text_field :name_ka, name: :name_ka, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
                     </th>
                     <th scope="col" class="max-w-[240px] sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 px-3 text-left text-sm text-gray-500 backdrop-blur backdrop-filter sm:table-cell">
-                      <%= form.select :name_en, Supergroup.order(:name_en).map { |supergroup| [supergroup.name_en, supergroup.name_en] }, { include_blank: true }, { class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" } %>
+                      <%= form.text_field :name_en, name: :name_en, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
                     </th>
                     <th scope="col" class="sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 px-3 text-left text-sm text-gray-500 backdrop-blur backdrop-filter">
-                      <%= form.select :status, Supergroup.statuses.keys.map { |status| [status.titleize, status] }, { include_blank: true }, { class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" } %>
+                      <%= form.select :status, Supergroup.statuses.keys.map { |status| [status.humanize, status] }, { include_blank: true }, { name: :status, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" } %>
                     </th>
                     <th scope="col" class="sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm text-gray-500 backdrop-blur backdrop-filter">
-                      <%= @supergroups.sum{ |supergroup| supergroup.groups.count } %>
+                      <%= @groups_count %>
                     </th>
                     <th scope="col" class="sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm text-gray-500 backdrop-blur backdrop-filter">
-                      <%= @supergroups.sum{ |supergroup| supergroup.collections.count } %>
+                      <%= @collections_count %>
                     </th>
                     <th scope="col" class="sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm text-gray-500 backdrop-blur backdrop-filter">
-                      <%= @supergroups.sum{ |supergroup| supergroup.text_blocks.count } %>
+                      <%= @text_blocks_count %>
                     </th>
                     <th scope="col" class="sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 py-1 pl-3 pr-4 backdrop-blur backdrop-filter sm:pr-6 lg:pr-8">
-                      <%= form.button type: :submit, class: "inline-flex block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" do %>
+                      <button type="submit" class="inline-flex block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
                         <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
                         </svg>
                         ძიება
                         <span class="sr-only">Search</span>
-                      <% end %>
+                      </button>
                     </th>
-                  <% end %>
-                </tr>
-              </thead>
-              <tbody>
-                <% @supergroups.each do |supergroup| %>
-                  <tr>
-                    <td class="whitespace-nowrap border-b border-gray-200 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
-                      <%= supergroup.id %>
-                    </td>
-                    <td class="max-w-[240px] overflow-hidden whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500 sm:table-cell">
-                      <%= link_to supergroup.name_ka, admin_groups_path(supergroup_id: supergroup.id), class: "text-indigo-600 hover:text-indigo-900" %>
-                    </td>
-                    <td class="max-w-[240px] overflow-hidden whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500 lg:table-cell">
-                      <%= link_to supergroup.name_en, admin_groups_path(supergroup_id: supergroup.id), class: "text-indigo-600 hover:text-indigo-900" %>
-                    </td>
-                    <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
-                      <%= supergroup.status %>
-                    </td>
-                    <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
-                      <%= supergroup.groups.count %>
-                    </td>
-                    <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
-                      <%= supergroup.collections.count %>
-                    </td>
-                    <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
-                      <%= supergroup.text_blocks.count %>
-                    </td>
-                    <td class="relative whitespace-nowrap border-b border-gray-200 py-4 pr-4 pl-3 text-right text-sm font-medium sm:pr-8 lg:pr-8">
-                      <%= link_to edit_admin_supergroup_path(id: supergroup.id), class: "text-indigo-600 hover:text-indigo-900" do %>
-                        edit<span class="sr-only">, supergroup.name_ka</span>
-                      <% end %>
-                    </td>
                   </tr>
-                <% end %>
-              </tbody>
-            </table>
+                </thead>
+                <tbody>
+                  <% @supergroups.each do |supergroup| %>
+                    <tr>
+                      <td class="whitespace-nowrap border-b border-gray-200 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
+                        <%= supergroup.id %>
+                      </td>
+                      <td class="max-w-[240px] overflow-hidden whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500 sm:table-cell">
+                        <%= link_to supergroup.name_ka, admin_groups_path(supergroup_id: supergroup.id), class: "text-indigo-600 hover:text-indigo-900" %>
+                      </td>
+                      <td class="max-w-[240px] overflow-hidden whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500 lg:table-cell">
+                        <%= link_to supergroup.name_en, admin_groups_path(supergroup_id: supergroup.id), class: "text-indigo-600 hover:text-indigo-900" %>
+                      </td>
+                      <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
+                        <%= supergroup.status %>
+                      </td>
+                      <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
+                        <%= supergroup.groups_count %>
+                      </td>
+                      <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
+                        <%= supergroup.collections_count %>
+                      </td>
+                      <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
+                        <%= supergroup.text_blocks_count %>
+                      </td>
+                      <td class="relative whitespace-nowrap border-b border-gray-200 py-4 pr-4 pl-3 text-right text-sm font-medium sm:pr-8 lg:pr-8">
+                        <%= link_to edit_admin_supergroup_path(id: supergroup.id), class: "text-indigo-600 hover:text-indigo-900" do %>
+                          edit<span class="sr-only">, supergroup.name_ka</span>
+                        <% end %>
+                      </td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            <% end %>
           </div>
         </div>
       </div>
