Dry up index htmls

--- a/app/views/admin/collections/index.html.erb
+++ b/app/views/admin/collections/index.html.erb
@@ -74,7 +74,7 @@
                     <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
                       <%= collection.status %>
                     </td>
-                    <td class="relative whitespace-nowrap border-b border-gray-200 py-4 pr-4 pl-3 text-right text-sm font-medium sm:pr-8 lg:pr-8">
+                    <td class="whitespace-nowrap border-b border-gray-200 py-4 pr-4 pl-3 text-right text-sm font-medium sm:pr-8 lg:pr-8">
                       <%= link_to edit_admin_collection_path(id: collection.id), class: "text-indigo-600 hover:text-indigo-900" do %>
                         edit<span class="sr-only">, collection.name_ka</span>
                       <% end %>
