--- a/app/views/admin/supergroups/index.html.erb
+++ b/app/views/admin/supergroups/index.html.erb
@@ -7,106 +7,58 @@
   <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
     <% crumbs = [] %>
     <% crumbs << { name: 'ქვეკორპუსები', url: admin_supergroups_path } %>
+
     <%= render 'admin/shared/breadcrumbs', crumbs: crumbs %>
 
+    <%= render 'admin/shared/new_button', name: 'ახალი ქვეკორპუსის დამატება', url: new_admin_supergroup_path %>
+
     <div class="mt-8 px-4 sm:px-6 lg:px-8">
-      <div class="sm:flex sm:items-center">
-        <div class="sm:flex-auto">
-          <!-- <h1 class="text-base font-semibold leading-6 text-gray-900">ქვეკორპუსები</h1> -->
-          <p class="mt-2 text-sm text-gray-700">მონაცემთა ბაზაში <%= @supergroups.total_count %> ჩანაწერია</p>
-        </div>
-        <div class="mt-4 sm:ml-16 sm:mt-0 sm:flex-none">
-          <%= link_to 'ახალი ქვეკორპუსის დამატება',
-                      new_admin_supergroup_path,
-                      type: "button",
-                      class: "block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
-          <!-- <button type="button" class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add user</button> -->
-        </div>
-      </div>
-      <div class="mt-8 flow-root">
+
+      <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {} %>
+
+      <div class="flow-root">
         <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
           <div class="inline-block min-w-full py-2 align-middle">
             <%= form_for @search, url: admin_supergroups_path, method: :get do |form| %>
               <table class="w-full border-separate border-spacing-0">
                 <thead>
-                  <tr>
-                    <th scope="col"
-                        class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">
-                      UID
-                    </th>
-                    <th scope="col" class="max-w-[240px] sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:table-cell">დასახელება ქართულად</th>
-                    <th scope="col" class="max-w-[240px] sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter lg:table-cell">დასახელება ინგლისურად</th>
-                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter">სტატუსი</th>
-                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter">ჯგუფები</th>
-                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter">კრებულები</th>
-                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter">წყვილები</th>
-                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-white bg-opacity-75 py-3.5 pl-3 pr-4 backdrop-blur backdrop-filter sm:pr-6 lg:pr-8">
-                      <span class="sr-only"></span>
-                    </th>
-                  </tr>
-                  <tr>
-                    <th scope="col" class="sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm text-gray-500 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">
 
-                    </th>
-                    <th scope="col" class="max-w-[240px] sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 px-3 text-left text-sm text-gray-500 backdrop-blur backdrop-filter sm:table-cell">
-                      <%= form.text_field :name_ka, name: :name_ka, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
-                    </th>
-                    <th scope="col" class="max-w-[240px] sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 px-3 text-left text-sm text-gray-500 backdrop-blur backdrop-filter sm:table-cell">
-                      <%= form.text_field :name_en, name: :name_en, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
-                    </th>
-                    <th scope="col" class="sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 px-3 text-left text-sm text-gray-500 backdrop-blur backdrop-filter">
-                      <%= form.select :status, Supergroup.statuses.keys.map { |status| [status.humanize, status] }, { include_blank: true }, { name: :status, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" } %>
-                    </th>
-                    <th scope="col" class="sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm text-gray-500 backdrop-blur backdrop-filter">
-                      <%= @groups_count %>
-                    </th>
-                    <th scope="col" class="sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm text-gray-500 backdrop-blur backdrop-filter">
-                      <%= @collections_count %>
-                    </th>
-                    <th scope="col" class="sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 px-3 py-3.5 text-left text-sm text-gray-500 backdrop-blur backdrop-filter">
-                      <%= @text_blocks_count %>
-                    </th>
-                    <th scope="col" class="sticky top-12 z-11 border-b border-gray-300 bg-white bg-opacity-75 py-1 pl-3 pr-4 backdrop-blur backdrop-filter sm:pr-6 lg:pr-8">
-                      <button type="submit" class="inline-flex block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
-                        <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
-                        </svg>
-                        ძიება
-                        <span class="sr-only">Search</span>
-                      </button>
-                    </th>
-                  </tr>
+                  <%= render 'admin/shared/table/header',
+                             columns: [{ name: 'UID' },
+                                       { name: 'დასახელება ქართულად', classes: 'max-w-[240px]' },
+                                       { name: 'დასახელება ინგლისურად', classes: 'max-w-[240px]' },
+                                       { name: 'სტატუსი' },
+                                       { name: 'ჯგუფები' },
+                                       { name: 'კრებულები' },
+                                       { name: 'წყვილები' },
+                                       { name: '' }] %>
+
+                  <%= render 'admin/shared/table/filter',
+                             form: form,
+                             columns: [{ name: :id, classes: 'max-w-[60px]', input_type: :text_field, input_classes: 'px-2' },
+                                       { name: :name_ka, classes: 'max-w-[240px]', input_type: :text_field },
+                                       { name: :name_en, classes: 'max-w-[240px]', input_type: :text_field },
+                                       { name: :status, input_type: :status_select, model: Supergroup },
+                                       { content: @groups_count, classes: 'py-3.5' },
+                                       { content: @collections_count, classes: 'py-3.5' },
+                                       { content: @text_blocks_count, classes: 'py-3.5' },
+                                       { input_type: :submit, classes: 'py-1 text-left text-sm text-gray-500' }] %>
+
+
                 </thead>
                 <tbody>
                   <% @supergroups.each do |supergroup| %>
-                    <tr>
-                      <td class="whitespace-nowrap border-b border-gray-200 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
-                        <%= supergroup.id %>
-                      </td>
-                      <td class="max-w-[240px] overflow-hidden whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500 sm:table-cell">
-                        <%= link_to supergroup.name_ka, admin_groups_path(supergroup_id: supergroup.id), class: "text-indigo-600 hover:text-indigo-900" %>
-                      </td>
-                      <td class="max-w-[240px] overflow-hidden whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500 lg:table-cell">
-                        <%= link_to supergroup.name_en, admin_groups_path(supergroup_id: supergroup.id), class: "text-indigo-600 hover:text-indigo-900" %>
-                      </td>
-                      <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
-                        <%= supergroup.status %>
-                      </td>
-                      <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
-                        <%= supergroup.groups_count %>
-                      </td>
-                      <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
-                        <%= supergroup.collections_count %>
-                      </td>
-                      <td class="whitespace-nowrap border-b border-gray-200 px-3 py-4 text-sm text-gray-500">
-                        <%= supergroup.text_blocks_count %>
-                      </td>
-                      <td class="relative whitespace-nowrap border-b border-gray-200 py-4 pr-4 pl-3 text-right text-sm font-medium sm:pr-8 lg:pr-8">
-                        <%= link_to edit_admin_supergroup_path(id: supergroup.id), class: "text-indigo-600 hover:text-indigo-900" do %>
-                          edit<span class="sr-only">, supergroup.name_ka</span>
-                        <% end %>
-                      </td>
-                    </tr>
+                    <%= render 'admin/shared/table/row',
+                               record: supergroup,
+                               columns: [{ type: :text, name: :id, classes: 'font-medium text-gray-900' },
+                                         { type: :link, name: :name_ka, url_method: -> (**params){ admin_groups_path(**params) }, url_params: { supergroup_id: supergroup.id }, classes: "max-w-[240px] overflow-hidden text-gray-500" },
+                                         { type: :link, name: :name_en, url_method: -> (**params){ admin_groups_path(**params) }, url_params: { supergroup_id: supergroup.id }, classes: "max-w-[240px] overflow-hidden text-gray-500" },
+                                         { type: :text, name: :status, classes: "text-gray-500" },
+                                         { type: :text, name: :groups_count, classes: "text-gray-500" },
+                                         { type: :text, name: :collections_count, classes: "text-gray-500" },
+                                         { type: :text, name: :text_blocks_count, classes: "text-gray-500" },
+                                         { type: :link, name: :edit, url_method: -> (**params){ edit_admin_supergroup_path(**params) }, url_params: { id: supergroup.id }, classes: "font-medium text-gray-500" }] %>
+
                   <% end %>
                 </tbody>
               </table>
@@ -114,9 +66,7 @@
           </div>
         </div>
       </div>
+      <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {} %>
     </div>
-
-    <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {} %>
-
   </div>
 </main>
